--- a/src/WhatsappBot/package.json
+++ b/src/WhatsappBot/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon main.js"
+    "start": "concurrently \"python3 ../server.py\" \"nodemon main.js\""
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +13,8 @@
     "nodemon": "^3.1.10",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.34.1"
+  },
+  "devDependencies": {
+    "concurrently": "^9.2.1"
   }
 }
