--- a/src/WhatsappBot/package.json
+++ b/src/WhatsappBot/package.json
@@ -4,12 +4,13 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"python3 ../server.py\" \"nodemon main.js\""
+    "start": "concurrently \"python3 ../server.py\" \"nodemon main.js --ignore games.json\""
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "express": "^5.1.0",
     "nodemon": "^3.1.10",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.34.1"
